tests/snapshots/parser_error_fixtures/modules_many_errors__BrokenEffect.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/modules_many_errors/BrokenEffect.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Effect Operation Colon

Missing `:` in effect operation signature. Write it as `op: Type -> Return`.

  examples/parser_errors/modules_many_errors/BrokenEffect.flx:3:15
  |
3 |         print String -> Unit,,
  |               ^^^^^^

Note:
  while parsing module `BrokenEffect` > effect `Console`


error[E034]: Invalid Effect Operation

I was expecting an operation name in this `effect` declaration, but I found `,`.

  examples/parser_errors/modules_many_errors/BrokenEffect.flx:3:30
  |
3 |         print String -> Unit,,
  |                              ^

Note:
  while parsing module `BrokenEffect` > effect `Console`

Found 2 errors.
== stdout ==
<not executed>
